--- a/.gitignore
+++ b/.gitignore
@@ -7,37 +7,11 @@ old
 
 # User Generated Content #
 ##########################
-scripts
-files
-sites/*/files
-sites/*/private
+files/*
+sites/*/files/*
+sites/*/private/*
 cache/*
-tmp
-shared_files
-*.sass-cache*
-node_modules
-
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-# It's better to unpack these files and commit the raw source, git has its own
-# built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+tmp/*
 
 # Logs and databases #
 ######################
@@ -52,26 +26,3 @@ node_modules
 ehthumbs.db
 Icon?
 Thumbs.db
-
-# Code editor temporary files #
-###############################
-*.swp
-*.swo
-.idea
-*.idea
-target
-tmp
-bin
-.classpath
-.project
-.settings
-out
-*.ipr
-*.iws
-*.iml
-.springBeans
-*.swp
-.pmd
-.allow-devtools-edit
-Guardfile
-*.orig
